twitter link fix and leadership align

--- a/app/common-components/directives/menu-directive/_menu-directive_styles.scss
+++ b/app/common-components/directives/menu-directive/_menu-directive_styles.scss
@@ -390,7 +390,6 @@ menu-directive
 
 	.people-option-list
 	{
-		left: -105px;
 		margin-bottom: 1rem;
 
 		.ghost-element
@@ -563,7 +562,7 @@ menu-directive
 	}
 }
 
-a
+a.twitter-link
 {
 	@include respond-to( 'small' )
 	{
